Fixed nav alignment

--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,12 @@ ul.navigation {
   padding-bottom: 4px;
   padding-top: 10px;
   width: 100%;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 ul.navigation li {
   display: inline-block;
-  padding: 8px;
+ padding: 8px;
 }
 .search, .mapview {
   float: right;
